--- a/proman-1.0.0/index.html
+++ b/proman-1.0.0/index.html
@@ -486,7 +486,9 @@
                             <!--  <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-5.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" target="_blank"
-                                href="https://frabjous-marzipan-bd7bd8.netlify.app"><i class="fa fa-link"></i></a>
+                                href="https://an-ecommerce-fashion-website-blxfrawu0-oghosabenjamin-gmailcom.vercel.app/"><i
+                                    class="fa fa-link"></i>
+                            </a>
                         </div>
                     </div>
                     <h4>Northstar</h4>
