first commit of the year

--- a/proman-1.0.0/index.html
+++ b/proman-1.0.0/index.html
@@ -437,16 +437,18 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/projects/tesls-clone.jpg" alt="">
+                        <img class="img-fluid" src="img/projects/gotra_thumb.png" alt="">
                         <div class="portfolio-btn">
                             <!-- <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-2.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" target="_blank"
-                                href="https://cozy-bunny-48aa5d.netlify.app/"><i class="fa fa-link"></i></a>
+                                href="https://expo.dev/artifacts/eas/7uVbPJRxDuq1Z5JHkwZAVY.apk"><i
+                                    class="fa fa-link"></i></a>
                         </div>
                     </div>
-                    <h4>Tesla-clone</h4>
-                    <p>A tesla clone mirroring the Tesla website developed using reactJs and redux
+                    <h4>Gotra</h4>
+                    <p>A goal management mobile application used for creating, recording and tracking each user's goal
+                        Developed using React Native, ExpressJS and MongoDB
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item first">
