--- a/proman-1.0.0/index.html
+++ b/proman-1.0.0/index.html
@@ -286,7 +286,7 @@
                                     <h5>Student Intern</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">2021</p>
-                                    <h6 class="mb-0">Ipson Technology</h6>
+                                    <h6 class="mb-0"> Hiphen Solutions</h6>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>Student Intern</h5>
@@ -488,8 +488,7 @@
                             <!--  <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-5.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" target="_blank"
-                                href="https://an-ecommerce-fashion-website-blxfrawu0-oghosabenjamin-gmailcom.vercel.app/"><i
-                                    class="fa fa-link"></i>
+                                href="https://an-ecommerce-fashion-website.vercel.app/"><i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
