first commit of the year

--- a/proman-1.0.0/index.html
+++ b/proman-1.0.0/index.html
@@ -426,7 +426,7 @@
                             <!--  <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="gate-zeta.vercel.app"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" target="_blank"
-                                href="gate-zeta.vercel.app"><i class="fa fa-link"></i></a><!--  -->
+                                href="https://gate-zeta.vercel.app/"><i class="fa fa-link"></i></a><!--  -->
                         </div>
 
                     </div>
