--- a/proman-1.0.0/index.html
+++ b/proman-1.0.0/index.html
@@ -442,7 +442,7 @@
                             <!-- <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-2.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" target="_blank"
-                                href="https://expo.dev/artifacts/eas/7uVbPJRxDuq1Z5JHkwZAVY.apk"><i
+                                href="https://drive.google.com/file/d/1nODvcnaWGg0bcbnhpOvbmlfj5x2aS-Nq/view?usp=drive_link"><i
                                     class="fa fa-link"></i></a>
                         </div>
                     </div>
@@ -453,17 +453,17 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/projects/e-commerce.jpg" alt="">
+                        <img class="img-fluid" src="img/projects/CatchMeApp splash.png" alt="">
                         <div class="portfolio-btn">
-                            <!--  <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-3.jpg"
-                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
+                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" target="_blank"
+                                href="https://apps.apple.com/gb/app/thecatchmeapp/id6738162941"><i class="fa fa-link"></i></a>
+                          
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" target="_blank"
-                                href="https://neb-mall.vercel.app/"><i class="fa fa-link"></i></a>
+                                href="https://play.google.com/store/apps/details?id=com.boogie2k.catchmeappfrontend"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
-                    <h4>NebTech</h4>
-                    <p> An online e-commerce website that sells phone cases integrating online payment methods.
-                        developed using nextJs
+                    <h4>TheCatchMeApp</h4>
+                    <p> A dating app for students in the uk, developed with React Native and available on both android and
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
@@ -499,17 +499,18 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/projects/boogie-bot.vercel.app.jpg" alt="">
+                        <img style="height: 161px; width: 355px;" class="img-fluid" src="img/projects/catchMe.jpg" alt="">
                         <div class="portfolio-btn">
                             <!--  <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-6.jpg"
                                 data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
                             <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" target="_blank"
-                                href="https://github.com/boogie2k/boogieBot"><i class="fa fa-link"></i></a>
+                                href="https://www.thecatchmeapp.co/"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
-                    <h4>Boogie Bot</h4>
-                    <p>An AI chat bot developed upon openai Key. Developed
-                        using vite
+                    <h4>
+                        TheCatchMeApp website
+                    </h4>
+                    <p>A website for the Student dating app
                     </p>
                 </div>
             </div>
